--- a/server/package.json
+++ b/server/package.json
@@ -13,8 +13,9 @@
     "dependencies": {
         "-": "0.0.1",
         "D": "^1.0.0",
-        "express": "^4.17.3",
-        "nodemon": "^2.0.15",
+        "cors": "^2.8.5",
+        "express": "^4.18.2",
+        "nodemon": "^2.0.22",
         "pg": "^8.7.3"
     }
 }
