--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "dependencies": {
     "core-js": "^3.6.5",
+    "lodash": "^4.17.21",
     "materialize-css": "^1.0.0-rc.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vuejs-paginate": "^2.1.0",
     "vuelidate": "^0.7.7",
     "vuetify": "^2.6.0",
     "vuex": "^3.4.0"
